fix 'runc permission denied error' on workers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,3 +35,4 @@ services:
     volumes: ["./keys/worker:/concourse-keys"]
     environment:
       CONCOURSE_TSA_HOST: concourse-web
+      CONCOURSE_BAGGAGECLAIM_DRIVER: btrfs
