--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       PGDATA: /database/data
 
   concourse-web:
-    image: concourse/concourse
+    image: concourse/concourse:3.14.1
     links: [concourse-db]
     command: web
     depends_on: [concourse-db]
@@ -28,17 +28,17 @@ services:
       CONCOURSE_POSTGRES_DATABASE: concourse
 
   concourse-worker:
-    image: concourse/concourse
+    image: concourse/concourse:3.14.1
     privileged: true
     links: [concourse-web, concourse-storage]
-    depends_on: [concourse-web, concourse-storage]
+    depends_on: [concourse-web, concourse-storage, concourse-db]
     command: worker
     volumes: ["./keys/worker:/concourse-keys"]
     environment:
-      CONCOURSE_TSA_HOST: concourse-web
+      CONCOURSE_TSA_HOST: concourse-web:2222
 
   concourse-storage:
-    image: minio/minio
+    image: minio/minio:RELEASE.2018-06-09T03-43-35Z
     command: "server /data"
     ports: ["9091:9000"]
     volumes: ["./minio-data:/data"]
